style : change in style

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
         <div class="container container-center"> 
             <h1>🔗Projects</h3>
             <p>I would like to showcase my work,and thus you can see my projects hosted online</p>
-            <a class="link secondary-link" href="/projects.html">Browse Projects</a>
+            <a class="link primary-link" href="/projects.html">Browse Projects</a>
         </div>
      </section>
 
@@ -56,7 +56,7 @@
         <div class="container container-center">
             <h1>📝Blogs</h3>
             <p>I am also working on some technical and non-technical blogs. I would like to document my journey of learning.</p>
-            <a class="link secondary-link" href="/blogs.html">Read Blogs</a> 
+            <a class="link primary-link" href="/blogs.html">Read Blogs</a> 
         </div>
     </section>
 
@@ -64,7 +64,7 @@
         <div class="container container-center"> 
             <h1>🎬vlogs</h3>
             <p>I have recorded my journey of learning basic level of webDevelopment ,and thus you can watch it on youTube</p>
-            <a class="link secondary-link" href="/vlogs.html">See my journey</a>
+            <a class="link primary-link" href="/vlogs.html">See my journey</a>
         </div>
      </section>
 
