--- a/vlogs.html
+++ b/vlogs.html
@@ -44,46 +44,46 @@
 
         <div class="container container-center spaces">
             <li>
-                <h2> vlog1 name___</h2>
+                <h2 class="offwhite"> vlog1 name___</h2>
                 <small>July 11th , 2021</small>
                 <p>Little info that what this vlog is all about</p>
-                <a class="link secondary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
          </div>
 
          <div class="container container-center spaces">
             <li>
-                <h2> vlog2 name___</h2>
+                <h2 class="offwhite"> vlog2 name___</h2>
                 <small>July 11th , 2021</small>
                 <p>Little info that what this vlog is all about</p>
-                <a class="link secondary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
          </div>
 
          <div class="container container-center spaces">
             <li>
-                <h2> vlog3 name___</h2>
+                <h2 class="offwhite"> vlog3 name___</h2>
                 <small>July 11th , 2021</small>
                 <p>Little info that what this vlog is all about</p>
-                <a class="link secondary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
          </div>
 
          <div class="container container-center spaces">
             <li>
-                <h2> vlog4 name___</h2>
+                <h2 class="offwhite"> vlog4 name___</h2>
                 <small>July 11th , 2021</small>
                 <p>Little info that what this vlog is all about</p>
-                <a class="link secondary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
          </div>
 
          <div class="container container-center spaces">
             <li>
-                <h2> vlog5 name___</h2>
+                <h2 class="offwhite"> vlog5 name___</h2>
                 <small>July 11th , 2021</small>
                 <p>Little info that what this vlog is all about</p>
-                <a class="link secondary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
          </div>
         
