--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,10 @@
                 <a class="link" href="/vlogs.html">🎬vlogs</a>
             </li>
 
+            <li class="list-item-inline">
+              <a class="link" href="/aboutMe.html"> about me</a>
+          </li>
+
         </ul>
     </nav>
    
