--- a/vlogs.html
+++ b/vlogs.html
@@ -28,6 +28,10 @@
                 <a class="link link-active" href="/vlogs.html">🎬vlogs</a>
             </li>
 
+            <li class="list-item-inline">
+                <a class="link" href="/aboutMe.html"> about me</a>
+            </li>
+
         </ul>
     </nav>
           
