added about me emoji

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             </li>
 
             <li class="list-item-inline">
-              <a class="link" href="/aboutMe.html"> about me</a>
+              <a class="link" href="/aboutMe.html">😎about me</a>
           </li>
 
         </ul>
