--- a/home.html
+++ b/home.html
@@ -72,6 +72,14 @@
         </div>
      </section>
 
+     <section class="section offwhite">
+        <div class="container container-center">
+            <h1>😎More info about me</h3>
+            <p>ThankYou for viewing my portfolio. Here's a link of my background education and my little achievements & Failures..!</p>
+            <a class="link primary-link" href="/aboutMe.html">Know me better...</a> 
+        </div>
+    </section>
+
 
      <footer class="footer">
         <div>Connect with me on</div>
