--- a/blogs.html
+++ b/blogs.html
@@ -46,10 +46,10 @@
         <div class="container container-center spaces">
             <li>
                 <h1>
-                1. ---
+                Tech-Blogpost 1
                 </h1>
-                <h2 class="offwhite">TOPIC NAME</h2>
-                <small>July 11th , 2021</small>
+                <h2 class="offwhite">Why GitHub is so important for developers?</h2>
+                <small>June 21 , 2021</small>
                 <p>Little info about the blog___</p>
                 <a class="link primary-link" href="blog-link">Read More...</a>
            </li>
@@ -59,10 +59,10 @@
          <div class="container container-center spaces">
             <li>
                 <h1>
-                  2. ---
+                  Tech-Blogpost 2
                 </h1>
-                <h2 class="offwhite">TOPIC NAME</h2>
-                <small>July 11th , 2021</small>
+                <h2 class="offwhite">Understand what is "Pull-Request" in GitHub </h2>
+                <small>June 23 , 2021</small>
                 <p>Little info about the blog___</p>
                 <a class="link primary-link" href="blog-link">Read More...</a>
            </li>
@@ -72,10 +72,10 @@
          <div class="container container-center spaces">
             <li>
                 <h1>
-                  3. ---
+                  Tech-Blogpost 3
                 </h1>
-                <h2 class="offwhite">TOPIC NAME</h2>
-                <small>July 11th , 2021</small>
+                <h2 class="offwhite">Why learning webDev is so important for data scientists ?? </h2>
+                <small>June 26 , 2021</small>
                 <p>Little info about the blog___</p>
                 <a class="link primary-link" href="blog-link">Read More...</a>
            </li>
@@ -85,10 +85,10 @@
          <div class="container container-center spaces">
             <li>
                 <h1>
-                  4. ---
+                  Non-Technical Blog 1
                 </h1>
-                <h2 class="offwhite">TOPIC NAME</h2>
-                <small>July 11th , 2021</small>
+                <h2 class="offwhite">This is the only skill which is most important in your life but you don't know what it is...</h2>
+                <small>June 30 , 2021</small>
                 <p>Little info about the blog___</p>
                 <a class="link primary-link" href="blog-link">Read More...</a>
            </li>
@@ -100,10 +100,10 @@
                 <h<div class="container container-center spaces">
                     <li>
                         <h1>
-                          5. ---
+                            Non-Technical Blog 2
                         </h1>
-                        <h2 class="offwhite">TOPIC NAME</h2>
-                        <small>July 11th , 2021</small>
+                        <h2 class="offwhite">The real reason why you can't concentrate on learning is__</h2>
+                        <small>July 4 , 2021</small>
                         <p>Little info about the blog___</p>
                         <a class="link primary-link" href="blog-link">Read More...</a>
                    </li>
@@ -112,10 +112,10 @@
                  <div class="container container-center spaces">
                     <li>
                         <h1>
-                          6. ---
+                            Non-Technical Blog 3
                         </h1>
-                        <h2 class="offwhite">TOPIC NAME</h2>
-                        <small>July 11th , 2021</small>
+                        <h2 class="offwhite">Why "Do what you love" is a bad life advice..?</h2>
+                        <small>July 8 , 2021</small>
                         <p>Little info about the blog___</p>
                         <a class="link primary-link" href="blog-link">Read More...</a>
                    </li>
