added welcome emoji

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
    
     <header class="hero">
         <img class="hero-img" src="images/projects.svg" />
-        <h1 class="hero-heading">Welcome to my <span class="heading-mix"> Projects Page 😃 + 💻 + 🧠 = 🏆</span></h1>
+        <h1 class="hero-heading">🙏Welcome to my <span class="heading-mix"> Projects Page 😃 + 💻 + 🧠 = 🏆</span></h1>
     </header>
 
 
