--- a/vlogs.html
+++ b/vlogs.html
@@ -38,7 +38,7 @@
 
     <header class="hero">
         <img class="hero-img" src="images/vlogs.svg" />
-        <h1 class="hero-heading">Welcome to my <span class="heading-mix"> 🎬vlogs Page</span></h1>
+        <h1 class="hero-heading">🙏Welcome to my <span class="heading-mix"> 🎬vlogs Page</span></h1>
     </header>
 
 
