--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,7 @@
 
     <header class="hero">
         <img class="hero-img" src="images/blogs.png" />
-        <h1 class="hero-heading">Welcome to my <span class="heading-mix"> BLOG📝 Page</span></h1>
+        <h1 class="hero-heading">🙏Welcome to my <span class="heading-mix"> BLOG📝 Page</span></h1>
     </header>
      
     <ol>
