--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
      <section class="section offwhite">
         <div class="container container-center">
             <h1>😎More info about me</h3>
-            <p>ThankYou for viewing my portfolio. Here's a link of my background education and my little achievements & Failures..!</p>
+            <p>ThankYou for viewing my portfolio. Here's a link to the page where you will get to know my academic background and my little achievements & Failures..!</p>
             <a class="link primary-link" href="/aboutMe.html">Know me better...</a> 
         </div>
     </section>
