docs: updated dates

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                   Project-7
                 </h1>
                 <h2 class="offwhite">---</h2>
-                <small>July 11th , 2021</small>
+                <small>June 23 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz to test your basic gk Qns but these Qns are little trickier which will compel you to think.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
@@ -67,7 +67,7 @@
                   Project-6
                 </h1>
                 <h2 class="offwhite">---</h2>
-                <small>July 10th , 2021</small>
+                <small>June 22 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz to test your basic gk Qns but these Qns are little trickier which will compel you to think.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
@@ -81,7 +81,7 @@
                   Project-5
                 </h1>
                 <h2 class="offwhite">---</h2>
-                <small>July 9th , 2021</small>
+                <small>June 20 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz to test your basic gk Qns but these Qns are little trickier which will compel you to think.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
@@ -95,7 +95,7 @@
                   Project-4
                 </h1>
                 <h2 class="offwhite">---</h2>
-                <small>July 8th , 2021</small>
+                <small>June 19 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz to test your basic gk Qns but these Qns are little trickier which will compel you to think.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
@@ -109,7 +109,7 @@
                   Project-3
                 </h1>
                 <h2 class="offwhite">---</h2>
-                <small>July 7th , 2021</small>
+                <small>June 15 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz to test your basic gk Qns but these Qns are little trickier which will compel you to think.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
@@ -123,7 +123,7 @@
                   Project-2
                 </h1>
                 <h2 class="offwhite">Tricky GK-Qns Quiz-App</h2>
-                <small>July 6th , 2021</small>
+                <small>June 10 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz to test your basic gk Qns but these Qns are little trickier which will compel you to think.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
@@ -137,7 +137,7 @@
                    Project-1
                 </h1>
                 <h2 class="offwhite">How well do you know me?</h2>
-                <small>July 6th , 2021</small>
+                <small>June 8 , 2021</small>
                 <p>A CLI app built with <strong>nodeJs</strong>. I build this quiz for my friends to check how well they know me.</p>
                 <a class="link primary-link" href="/">Live Project</a>
                 <a class="link secondary-link" href="/">View Source Code</a>
