--- a/vlogs.html
+++ b/vlogs.html
@@ -49,7 +49,7 @@
         <div class="container container-center spaces">
             <li>
                 <h2 class="offwhite"> vlog1 name___</h2>
-                <small>July 11th , 2021</small>
+                <small>June 3 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
@@ -58,7 +58,7 @@
          <div class="container container-center spaces">
             <li>
                 <h2 class="offwhite"> vlog2 name___</h2>
-                <small>July 11th , 2021</small>
+                <small>June 10 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
@@ -67,7 +67,7 @@
          <div class="container container-center spaces">
             <li>
                 <h2 class="offwhite"> vlog3 name___</h2>
-                <small>July 11th , 2021</small>
+                <small>June 12 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
@@ -76,7 +76,7 @@
          <div class="container container-center spaces">
             <li>
                 <h2 class="offwhite"> vlog4 name___</h2>
-                <small>July 11th , 2021</small>
+                <small>June 15, 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
@@ -85,7 +85,7 @@
          <div class="container container-center spaces">
             <li>
                 <h2 class="offwhite"> vlog5 name___</h2>
-                <small>July 11th , 2021</small>
+                <small>June 25 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
            </li>
