--- a/vlogs.html
+++ b/vlogs.html
@@ -48,7 +48,7 @@
 
         <div class="container container-center spaces">
             <li>
-                <h2 class="offwhite"> vlog1 name___</h2>
+                <h2 class="offwhite">Life's First coding experience!</h2>
                 <small>June 3 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
@@ -57,7 +57,7 @@
 
          <div class="container container-center spaces">
             <li>
-                <h2 class="offwhite"> vlog2 name___</h2>
+                <h2 class="offwhite"> Lessons I learned as a newbie coder..!</h2>
                 <small>June 10 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
@@ -66,7 +66,7 @@
 
          <div class="container container-center spaces">
             <li>
-                <h2 class="offwhite"> vlog3 name___</h2>
+                <h2 class="offwhite"> Joy after building my first website..</h2>
                 <small>June 12 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
@@ -75,7 +75,7 @@
 
          <div class="container container-center spaces">
             <li>
-                <h2 class="offwhite"> vlog4 name___</h2>
+                <h2 class="offwhite"> Magic of component library..!</h2>
                 <small>June 15, 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
@@ -84,7 +84,7 @@
 
          <div class="container container-center spaces">
             <li>
-                <h2 class="offwhite"> vlog5 name___</h2>
+                <h2 class="offwhite"> My experience in level-zero and a honest review..!</h2>
                 <small>June 25 , 2021</small>
                 <p>Little info that what this vlog is all about</p>
                 <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
