--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,11 +35,26 @@
         </ul>
     </nav>
 
- 
+   <div class="offwhite">
     <header class="hero">
         <img class="hero-img" src="images/Frame.jpg" />
         <h1 class="hero-heading">sachinKumar<span class="heading-mix"> the webDeveloper 💻 </span></h1>
     </header>
+   </div>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>🤹my Skills</h3>
+            <h3>-HTML</h3>
+            <h3>-CSS</h3>
+            <h3>-Git</h3>
+            <h3>-Javascript</h3>
+            <h3>-NodeJS</h3>
+            <h3>-WebHosting</h3>
+            <small>Still in learning phase..!</small>
+            
+         </div>
+    </section>
 
 
     <section class="section offwhite">
