--- a/blogs.html
+++ b/blogs.html
@@ -51,7 +51,7 @@
                 <h2 class="offwhite">Why GitHub is so important for developers?</h2>
                 <small>June 21 , 2021</small>
                 <p>Little info about the blog___</p>
-                <a class="link primary-link" href="blog-link">Read More...</a>
+                <a class="link primary-link" href="https://mytechblog1.netlify.app/">Read More...</a>
            </li>
          </div>
       
