docs: added socialmedia-images

--- a/projects.html
+++ b/projects.html
@@ -151,20 +151,20 @@
       <div>Connect with me on</div>
       <ul class="social-links list-non-bullet">
           <li class="list-item-inline">
-              <a class="link" href="/"> GitHub </a>
+              <a class="link" href="/" target="_blank"><img class="social-img" src="images/github.png" /></a>
           </li>
           <li class="list-item-inline">
-              <a class="link" href="/">LinkedIn</a>
+              <a class="link" href="/" target="_blank"><img class="social-img" src="images/linkedin.png"/> </a>
           </li>
           <li class="list-item-inline">
-              <a class="link" href="/">YouTube</a>
+              <a class="link" href="/" target="_blank"> <img class="social-img" src="images/youtube.png" /> </a>
           </li>
           <li class="list-item-inline">
-              <a class="link" href="/">Twitter</a>
+              <a class="link" href="/" target="_blank"> <img class="social-img" src="images/twitter.png" /> </a>
           </li>
           
       </ul>
-      <small>mail- sachinbaranwal1990@gmail.com</small>
+      <p>mail- sachinbaranwal1990@gmail.com</p>
   </footer>
 
 </body>
