docs: updated social-media links

--- a/home.html
+++ b/home.html
@@ -113,17 +113,21 @@
      <footer class="footer">
         <div>Connect with me on</div>
         <ul class="social-links list-non-bullet">
+           
             <li class="list-item-inline">
-                <a class="link" href="/" target="_blank"><img class="social-img" src="images/github.png" /></a>
+                <a class="link" href="https://www.linkedin.com/feed/" target="_blank"><img class="social-img" src="images/linkedin.png"/> </a>
             </li>
+
             <li class="list-item-inline">
-                <a class="link" href="/" target="_blank"><img class="social-img" src="images/linkedin.png"/> </a>
+                <a class="link" href="https://github.com/sacchubaranwal" target="_blank"><img class="social-img" src="images/github.png" /></a>
             </li>
+
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/home" target="_blank"> <img class="social-img" src="images/twitter.png" /> </a>
+            </li>
+
             <li class="list-item-inline">
                 <a class="link" href="/" target="_blank"> <img class="social-img" src="images/youtube.png" /> </a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/" target="_blank"> <img class="social-img" src="images/twitter.png" /> </a>
             </li>
             
         </ul>
