docs: updated my social-media homepage links

--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
         <ul class="social-links list-non-bullet">
            
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/feed/" target="_blank"><img class="social-img" src="images/linkedin.png"/> </a>
+                <a class="link" href="https://in.linkedin.com/in/sachin-baranwal-189b81205?trk=people-guest_people_search-card" target="_blank"><img class="social-img" src="images/linkedin.png"/> </a>
             </li>
 
             <li class="list-item-inline">
@@ -123,7 +123,7 @@
             </li>
 
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/home" target="_blank"> <img class="social-img" src="images/twitter.png" /> </a>
+                <a class="link" href="https://twitter.com/Sachin74592608" target="_blank"> <img class="social-img" src="images/twitter.png" /> </a>
             </li>
 
             <li class="list-item-inline">
