docs: added some line inside blog page

--- a/blogs.html
+++ b/blogs.html
@@ -96,6 +96,11 @@
          </div>          
 
     </ol>
+
+    <hr>
+    <h2 style="text-align: center;">I am working on some more blogs..I'll put it here soon..</h2>
+    <p style="text-align: center;">Also, I'll be putting all my future blogs here.</p> 
+    <hr>
       
 
     <footer class="footer">
