docs: added some lines in vlogs page

--- a/vlogs.html
+++ b/vlogs.html
@@ -93,6 +93,12 @@
         
     </ol>
 
+
+<hr>
+<h2 style="text-align: center">Nowadays, I'm practicing live-coding and recording some of the videos..I'll put all that here soon...</h2>
+<p style="text-align: center">Thankyou for viewing the page.</p>
+<hr>
+
     <footer class="footer">
         <div>Connect with me on</div>
         <ul class="social-links list-non-bullet">
