--- a/blogs.html
+++ b/blogs.html
@@ -72,7 +72,7 @@
          <div class="container container-center spaces">
             <li>
                 <h1>
-                  TechBlog-3
+                  SoftTopic-1
                 </h1>
                 <h2 class="offwhite">Will Robots take your Job..? </h2>
                 <small>June 28 , 2021</small>
@@ -86,7 +86,7 @@
          <div class="container container-center spaces">
             <li>
                 <h1>
-                  SoftTopic
+                  SoftTopic-2
                 </h1>
                 <h2 class="offwhite">Why "Do what you love" & "Follow your passion" is epically a bad life advice..?</h2>
                 <small>June 28 , 2021</small>
