refactor: changed myPic

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -40,7 +40,7 @@
 
    <div class="offwhite">
     <header class="hero">
-        <img class="hero-img" src="images/Frame.jpg" />
+        <img class="hero-img" src="images/Frame.png" />
         <h1 class="hero-heading">sachinKumar<span class="heading-mix"> the webDeveloper 💻 </span></h1>
     </header>
    </div>
