feat: added youtube video on the vlog page itself.
Taken help from w3 schools website

--- a/vlogs.html
+++ b/vlogs.html
@@ -50,8 +50,12 @@
             <li>
                 <h2 class="offwhite">Life's First coding experience!</h2>
                 <small>June 3 , 2021</small>
+                <br>
+                <iframe width="400" height="250"
+                  src="https://www.youtube.com/embed/WmOYCaaETFg">
+                </iframe>
                 <p> It was fabulous. Their were times when I see coders doing programming in TVs and I feel..Oh my god..how hard it is to program. But, now when I myself is programming for past few days,I can say if you do coding consistently..,you will fall in love with it. Really, it feels so good when you see the output of what you have just programmed..,doesn't matter how simpler your code is...</p>
-                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch on YouTube</a>
            </li>
          </div>
 
@@ -59,10 +63,14 @@
             <li>
                 <h2 class="offwhite"> Lessons I learned as a newbie coder..!</h2>
                 <small>June 10 , 2021</small>
+                <br>
+                <iframe width="400" height="250"
+                  src="https://www.youtube.com/embed/WmOYCaaETFg">
+                </iframe>
                 <p>As we know that, developers are paid to program and this is a mental-work which is incomparable to any physical work.</p>
                 <p>--You should maintain this attitude of not giving-up. Especially don't give up early..,bz you might miss a wonderful career.</p>
                 <p>--Mental-Toughness is important in this field than it is in any other field.</p>
-                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch on YouTube</a>
            </li>
          </div>
 
@@ -70,12 +78,16 @@
             <li>
                 <h2 class="offwhite">Do you know how internet works..?</h2>
                 <small>June 12 , 2021</small>
+                <br>
+                <iframe width="400" height="250"
+                  src="https://www.youtube.com/embed/WmOYCaaETFg">
+                </iframe>
                 <p>Understand what is:</p>
                 <p>-domain-name</p>
                 <p>-server</p>
                 <p>-hosting</p>
                 <p>-client</p>
-                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch on YouTube</a>
            </li>
          </div>
 
@@ -83,8 +95,12 @@
             <li>
                 <h2 class="offwhite"> what is css and how it is used with html file..?</h2>
                 <small>June 15, 2021</small>
+                <br>
+                <iframe width="400" height="250"
+                  src="https://www.youtube.com/embed/WmOYCaaETFg">
+                </iframe>
                 <p>Think it like this way that if HTML is a skeleton, then css transforms that skeleton into a well-dressed gentle human being. Let's see an example of this & see how css beautifies a html page... </p>
-                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch on YouTube</a>
            </li>
          </div>
 
@@ -92,10 +108,14 @@
             <li>
                 <h2 class="offwhite"> My experience in level-zero and a honest review..!</h2>
                 <small>June 25 , 2021</small>
+                <br>
+                <iframe width="400" height="250"
+                  src="https://www.youtube.com/embed/WmOYCaaETFg">
+                </iframe>
                 <p>-I have no words to express my views bz seriously it is so good. And whosoever have structured it..,he/she had done a great job. </p>
                 <p>-I love the strategy with which Tanay Bhai teaches, that is- if the student didn't actively do what tanay bhai is teaching, then he will not get anything out of this course.</p>
                 <p>-to know more..,please watch the video mentioned below...</p>
-                <a class="link primary-link" href="vlog-youtube-link">Watch the video</a>
+                <a class="link primary-link" href="vlog-youtube-link">Watch on YouTube</a>
            </li>
          </div>
         
@@ -129,3 +149,13 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
