docs: added gmail icon img

--- a/home.html
+++ b/home.html
@@ -131,10 +131,9 @@
             </li>
             
         </ul>
-        <p>mail- sachinbaranwal1990@gmail.com</p>
-    </footer>
 
-
+        <p>sachinbaranwal1990@gmail.com</p>
+        <img class="mail-img" src="images/mail.png" />
 </body>
 </html>
 
