added gmail icon on each page

--- a/blogs.html
+++ b/blogs.html
@@ -120,7 +120,8 @@
             </li>
             
         </ul>
-        <p>mail- sachinbaranwal1990@gmail.com</p>
+        <p>sachinbaranwal1990@gmail.com</p>
+        <img class="mail-img" src="images/mail.png" />
     </footer>
 
 </body>
