--- a/vlogs.html
+++ b/vlogs.html
@@ -144,7 +144,8 @@
             </li>
             
         </ul>
-        <p>mail- sachinbaranwal1990@gmail.com</p>
+        <p>sachinbaranwal1990@gmail.com</p>
+        <img class="mail-img" src="images/mail.png" />
     </footer>
 
 </body>
